syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.notification_service.service";
option java_outer_classname = "NotificationProto";

service NotificationService {
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
}

message SendNotificationRequest {
  string driver_id = 1;
  string title = 2;
  string body = 3;
}

message SendNotificationResponse {
  bool success = 1;
  string message = 2;
}
